--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "solid-namespace",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A collection of common RDF namespaces used in the Solid project",
   "main": "./index.js",
   "scripts": {
-    "standard": "standard src/*"
+    "standard": "standard index.js"
   },
   "repository": {
     "type": "git",
@@ -22,15 +22,21 @@
     "rest"
   ],
   "author": "Dmitri Zagidulin <dzagidulin@gmail.com>",
+  "contributors": [
+    "Dmitri Zagidulin <dzagidulin@gmail.com>",
+    "Jordan Shurmer <jordan@shurmerfamily.com>"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/solid/solid-namespace/issues"
   },
   "homepage": "https://github.com/solid/solid-namespace",
   "dependencies": {
-    "rdf-ns": "^0.1.0"
+    "rdf": "^4.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "standard": "^12.0.1"
+  },
   "standard": {
     "globals": []
   }
