Accept a rdf library and return the NamedNodes if provided.
This returns things similar to how they were functioning in 0.1.0
but keeps all the additional namespaces and reduces the dependencies

--- a/package.json
+++ b/package.json
@@ -31,12 +31,7 @@
     "url": "https://github.com/solid/solid-namespace/issues"
   },
   "homepage": "https://github.com/solid/solid-namespace",
-  "dependencies": {
-    "rdf": "^4.0.1"
-  },
-  "devDependencies": {
-    "standard": "^12.0.1"
-  },
+  "dependencies": {},
   "standard": {
     "globals": []
   }
