--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/solid/solid-namespace"
+    "url": "git+https://github.com/solid/solid-namespace.git"
   },
   "keywords": [
     "solid",
